Fix inputs order on smaller screens and make webpage more responsive. Add text to README file.

--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ button {
 	width: 180px;
 	height: 50px;
 	margin-top: 3em;
-	margin-left: calc((100% - 175px)/2);
+	margin-left: calc((100% - 175px) / 2);
 	background-color: #1a397d;
 	color: white;
 	border: none;
@@ -141,6 +141,7 @@ button {
 .flex-column {
 	display: flex;
 	flex-direction: column;
+	flex-wrap: wrap;
 }
 
 .flex-wrapper {
@@ -163,15 +164,15 @@ button {
 }
 
 .flex-form {
-	flex-wrap: wrap;
 	height: 100%;
 	width: 100%;
 	padding-top: 1.25em;
-	column-gap: 6em;
 	row-gap: 1.5em;
 }
 
-.three-inputs-div {
+.two-inputs-div {
+	flex-wrap: wrap;
+	column-gap: 6em;
 	row-gap: 1.5em;
 }
 
@@ -243,7 +244,7 @@ button {
 	cursor: pointer;
 }
 
-@media only screen and (min-width: 700px) {
+@media only screen and (min-width: 740px) {
 	h2 {
 		font-size: 2rem;
 	}
@@ -251,14 +252,21 @@ button {
 		font-size: 1.5rem;
 	}
 	#main-form-div {
-		width: calc(100% - 6em);
+		width: calc(100% - 3.5em);
 		min-height: max-content;
 		margin-block: 2vh;
-		margin-inline: 3em;
+		margin-inline: 1.75em;
 		border-radius: 15px;
 	}
 	#form-div {
 		box-shadow: 0 3px 2px #d1d1d1, 0 0 3px #d1d1d1;
+	}
+}
+
+@media only screen and (min-width: 780px) {
+	#main-form-div {
+		width: calc(100% - 6em);
+		margin-inline: 3em;
 	}
 }
 
